--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-
+<!DOCTYPE html>
+<html lang="pt-BR">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Exercício de Tipografia</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@1,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@1,100..900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="normalize.css">
+<link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+            <div class="container">
+                <!-- header -->
+                <header>
+                    <h1>Receita de Pudim</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, ex unde. Impedit optio alias unde.</p>
+                </header>
+                <!-- main content -->
+                 <main>
+                     <img src="pudim.webp" alt="imagem de pudim">
+                     <h2>Ingredientes </h2>
+                                     <ul>
+                        <li>1 lata de leite condensado</li>
+                        <li>3 ovos</li>
+                        <li>1 litro de leite</li>
+                        <li>1 xícara de açúcar</li>
+                                     </ul>
+                                     <h2>Modo de Preparo</h2>
+                                     <ul>
+                        <li>Transforme o açúcar em calda</li>
+                        <li>Forre uma tigela com o caldo</li>
+                        <li>Bata os Ingredientes no liquidificador</li>
+                        <li>Asse em banho maria por 90 minutos</li>
+                                     </ul>
+                 </main>
+            </div>
+    </body>
+</html>
